--- a/.cvsignore
+++ b/.cvsignore
@@ -1,2 +1,11 @@
-fusexmp
-avfsd
+Makefile.in
+Makefile
+aclocal.m4
+configure
+install-sh
+mkinstalldirs
+missing
+config.log
+config.h
+config.cache
+config.status
