--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,3 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = kernel lib example include
+SUBDIRS = linux
+
+include_HEADERS = fuse.h
