preparing for release

--- a/util/Makefile.am
+++ b/util/Makefile.am
@@ -3,3 +3,7 @@
 bin_PROGRAMS = fusermount
 
 fusermount_SOURCES = fusermount.c
+
+install-exec-hook:
+	chown root $(DESTDIR)$(bindir)/fusermount
+	chmod u+s $(DESTDIR)$(bindir)/fusermount
