--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-bin_PROGRAMS = fusexmp
+noinst_PROGRAMS = fusexmp
 
 fusexmp_SOURCES = fusexmp.c
 
