--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -1,7 +1,8 @@
 ## Process this file with automake to produce Makefile.in
 
-noinst_PROGRAMS = fusexmp
+noinst_PROGRAMS = fusexmp null
 
 fusexmp_SOURCES = fusexmp.c
+null_SOURCES = null.c
 
-fusexmp_LDADD = ../lib/libfuse.a -lpthread
+LDADD = ../lib/libfuse.a -lpthread
