writing modules made more easy

--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -1,8 +1,9 @@
 ## Process this file with automake to produce Makefile.in
 
-noinst_PROGRAMS = fusexmp null
+noinst_PROGRAMS = fusexmp null hello
 
 fusexmp_SOURCES = fusexmp.c
 null_SOURCES = null.c
+hello_SOURCES = hello.c
 
 LDADD = ../lib/libfuse.a -lpthread
