--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 SUBDIRS = kernel lib util example include patch
+
+EXTRA_DIST =			\
+	fuse.spec		\
+	fuse_redhat.spec
