--- a/configure.in
+++ b/configure.in
@@ -11,6 +11,7 @@ fi
 AC_SUBST(LD)
 
 CFLAGS="-Wall -W -g -O2"
+CPPFLAGS="$CPPFLAGS -D_REENTRANT"
 
 AC_ARG_ENABLE(kernel-module,
 	[  --enable-kernel-module  Compile kernel module, requires --with-kernel option ])
