--- a/kernel/configure.ac
+++ b/kernel/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(fuse-kernel, 2.5.0)
+AC_INIT(fuse-kernel, 2.5.1)
 AC_CONFIG_HEADERS([config.h])
 
 AC_PROG_INSTALL
@@ -37,7 +37,9 @@ if test -z "$enable_kernel_module" -a -z "$kernelbuild" && echo "$runver" | grep
 	fi
 	if test "$checkmodule" = yes; then
 		AC_MSG_CHECKING([if FUSE module is from official kernel])
-			if fgrep -q "fuse distribution version: " /lib/modules/${runver}/kernel/fs/fuse/fuse.ko 2> /dev/null; then
+		if test ! -f /lib/modules/${runver}/kernel/fs/fuse/fuse.ko; then
+			AC_MSG_RESULT([no])
+		elif fgrep -q "fuse distribution version: " /lib/modules/${runver}/kernel/fs/fuse/fuse.ko 2> /dev/null; then
 			AC_MSG_RESULT([no])
 		else
 			AC_MSG_RESULT([yes])
