--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -38,6 +38,6 @@ libfuse_la_LDFLAGS = @libfuse_libs@ -version-number 2:7:4 \
 	-Wl,--version-script,$(srcdir)/fuse_versionscript
 
 libulockmgr_la_SOURCES = ulockmgr.c
-libulockmgr_la_LDFLAGS = -version-number 1:0:1
+libulockmgr_la_LDFLAGS = -pthread -version-number 1:0:1
 
 EXTRA_DIST = fuse_versionscript
