--- a/example/Makefile.am
+++ b/example/Makefile.am
@@ -3,7 +3,7 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include -D_REENTRANT
 noinst_HEADERS = fioc.h
 noinst_PROGRAMS = fusexmp fusexmp_fh null hello hello_ll fioc fioclient \
-		  fsel fselclient cusexmp fuse_lo-plus
+		  fsel fselclient cusexmp fuse_lo-plus dirread
 
 LDADD = ../lib/libfuse3.la
 fusexmp_fh_LDADD = ../lib/libfuse3.la @fusexmp_fh_libs@
