--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,4 @@ script:
     - CFLAGS="-fsanitize=address,undefined -g -O1 -Wall -Werror" make
     - doxygen doc/Doxyfile
     - python -m pytest test/
+    - sudo python -m pytest test/
