meson: Less Python more meson syntax!

--- a/util/meson.build
+++ b/util/meson.build
@@ -18,7 +18,7 @@ executable('mount.fuse3', ['mount.fuse.c'],
            install: true,
            install_dir: get_option('sbindir'))
 
-if not get_option('skip-systemfiles'):
+if not get_option('skip-systemfiles')
   udevrulesdir = get_option('udevrulesdir')
   if udevrulesdir == ''
     udev = dependency('udev')
