Fix modules/iconv.c build script
only libiconv exists and config has HAVE_ICONV , libfuse_sources add modules/iconv.c, and deps add libiconv

--- a/lib/meson.build
+++ b/lib/meson.build
@@ -10,10 +10,10 @@ else
 endif
 
 deps = [ thread_dep ]
+libiconv = cc.find_library('iconv', required: fale)
 
-if cfg.get('HAVE_ICONV')
+if cfg.get('HAVE_ICONV') and libiconv.found()
    libfuse_sources += [ 'modules/iconv.c' ]
-   libiconv = cc.find_library('iconv', required: true)
    deps += [ libiconv ]
 endif
 
