--- a/lib/meson.build
+++ b/lib/meson.build
@@ -10,7 +10,7 @@ else
 endif
 
 deps = [ thread_dep ]
-libiconv = cc.find_library('iconv', required: fale)
+libiconv = cc.find_library('iconv', required: false)
 
 if cfg.get('HAVE_ICONV') and libiconv.found()
    libfuse_sources += [ 'modules/iconv.c' ]
