check is there libiconv
Sometimes libiconv could not find , but <iconv.h> exists.

--- a/meson.build
+++ b/meson.build
@@ -43,8 +43,10 @@ foreach func : test_funcs
 endforeach
 cfg.set('HAVE_SETXATTR', 
         cc.has_function('setxattr', prefix: '#include <sys/xattr.h>'))
+        
+libiconv = cc.find_library('iconv', required: false)
 cfg.set('HAVE_ICONV', 
-        cc.has_function('iconv', prefix: '#include <iconv.h>'))
+        cc.has_function('iconv', prefix: '#include <iconv.h>') and libiconv.found())
 
 # Test if structs have specific member
 cfg.set('HAVE_STRUCT_STAT_ST_ATIM',
