--- a/lib/meson.build
+++ b/lib/meson.build
@@ -10,7 +10,9 @@ else
 endif
 
 if cfg.get('HAVE_ICONV')
+   libiconv = cc.find_library('iconv', required: true)
    libfuse_sources += [ 'modules/iconv.c' ]
+   deps += [ libiconv ]
 endif
 
 deps = [ thread_dep ]
