--- a/lib/meson.build
+++ b/lib/meson.build
@@ -11,9 +11,11 @@ endif
 
 deps = [ thread_dep ]
 if cfg.get('HAVE_ICONV')
-   libiconv = cc.find_library('iconv', required: true)
    libfuse_sources += [ 'modules/iconv.c' ]
-   deps += [ libiconv ]
+   libiconv = cc.find_library('iconv', required: false)
+   if libiconv.found()
+      deps += [ libiconv ]
+   endif
 endif
 
 libdl = cc.find_library('dl', required: false)
