--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -5,6 +5,10 @@
 cmake_minimum_required (VERSION 3.12.0)
 set (CMAKE_VERBOSE_MAKEFILE FALSE)
 
+if( NOT DEFINED NDEBUG )
+        message(WARNING "NDEBUG is *not* defined, you will almost definitely experience problems")
+endif()
+
 set(EXAMPLES passthrough passthrough_fh hello hello_ll printcap ioctl_client 
              poll_client ioctl cuse cuse_client)
 
