Fix passthrough_ll on FreeBSD
* FreeBSD lacks AT_EMPTY_PATH.  Where passthrough_ll uses AT_EMPTY_PATH
  on Linux, fallback to non-at-based functions like fstat/lstat on FreeBSD
* Don't use O_PATH when opening the mount point directory.  Since it's
  always a directory, O_PATH is not needed.
* Conditionalize the extended attribute code.

Fixes #194

--- a/example/meson.build
+++ b/example/meson.build
@@ -3,9 +3,11 @@ examples = [ 'passthrough', 'passthrough_fh',
              'ioctl_client', 'poll_client', 'ioctl',
              'cuse', 'cuse_client' ]
 
-if not platform.endswith('bsd') and platform != 'dragonfly'
+if platform != 'netbsd' and platform != 'openbsd' and platform != 'dragonfly'
     examples += 'passthrough_ll'
+endif
 
+if not platform.endswith('bsd') and platform != 'dragonfly'
     # According to Conrad Meyer <cem@freebsd.org>, FreeBSD doesn't
     # support mounting files, This is enforced in vfs_domount_first()
     # with the v_type != VDIR check.
