meson_options: Add initscriptsdir option
Add meson option 'initscriptsdir' to explicitly define location of
system initialization scripts. 'initscriptsdir' is '/etc/init.d' by
default.
Option usage:
meson --prefix=/usr/local -Dinitscriptsdir=/custom/init.d \
        libfuse-src-dir build-dir
DESTDIR="${PWD}/install-dir" ninja -C build-dir

As a result, init script will be installed into
"${PWD}/install-dir/custom/init.d" location.

Fixes #489

Signed-off-by: Sergey Bobrenok <bobrofon@gmail.com>

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -13,3 +13,5 @@ option('examples', type : 'boolean', value : true,
 option('useroot', type : 'boolean', value : true,
        description: 'Set owner and setuid bits on installed files')
 
+option('initscriptsdir', type : 'string', value : '/etc/init.d',
+       description: 'Where to install init scripts')
