--- a/config.h.in
+++ b/config.h.in
@@ -24,7 +24,7 @@
 
 #define HAVE_STRUCT_STAT_ST_ATIM @HAVE_STRUCT_STAT_ST_ATIM@
 
-#undef HAVE_STRUCT_STAT_ST_ATIMESPEC @HAVE_STRUCT_STAT_ST_ATIMESPEC@
+#define HAVE_STRUCT_STAT_ST_ATIMESPEC @HAVE_STRUCT_STAT_ST_ATIMESPEC@
 
 #define HAVE_UTIMENSAT @HAVE_UTIMENSAT@
 
