use ppa:spotfoss/ppa for valgrind 3.16.1 built for bionic, which has proper support for copy_file_range (x86_64 syscall 326)

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
   apt:
     sources:
     - sourceline: 'ppa:ubuntu-toolchain-r/test'
+    - sourceline: 'ppa:spotfoss/ppa'
     packages:
     - doxygen
     - valgrind
