add an explicit url to the public key for the valgrind ppa so that travis finds it without issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
     sources:
     - sourceline: 'ppa:ubuntu-toolchain-r/test'
     - sourceline: 'ppa:spotfoss/ppa'
+      key_url: 'https://spot.fedorapeople.org/ubuntu-gpg.key'
     packages:
     - doxygen
     - valgrind
