--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 dist: bionic
 
-before_script:
+before_install:
     - curl https://spot.fedorapeople.org/spotfoss-ppa.key | sudo apt-key add -
 language:
     - c
