--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ dist: bionic
 
 before_install:
     - curl https://spot.fedorapeople.org/spotfoss-ppa.key | sudo apt-key add -
+    - wget https://launchpad.net/~spotfoss/+archive/ubuntu/ppa/+files/valgrind_3.16.1-2_amd64.deb
+    - sudo dpkg -i valgrind_3.16.1-2_amd64.deb
 language:
     - c
     - c++
@@ -10,11 +12,8 @@ addons:
   apt:
     sources:
     - sourceline: 'ppa:ubuntu-toolchain-r/test'
-    - sourceline: 'ppa:spotfoss/ppa'
-      key_url: 'https://spot.fedorapeople.org/spotfoss-ppa.key'
     packages:
     - doxygen
-    - valgrind
     - clang
     - libstdc++-7-dev 
     - libstdc++-10-dev
