--- a/meson.build
+++ b/meson.build
@@ -2,6 +2,7 @@ project('libfuse3', ['c'], version: '3.10.3',
         meson_version: '>= 0.42',
         default_options: [
             'buildtype=debugoptimized',
+            'cpp_std=c++11',
             'warning_level=2',
         ])
 
@@ -70,9 +71,8 @@ add_project_arguments('-D_REENTRANT', '-DHAVE_CONFIG_H', '-Wno-sign-compare',
                       '-Wstrict-prototypes', '-Wmissing-declarations', '-Wwrite-strings',
                       '-fno-strict-aliasing', language: 'c')
 add_project_arguments('-D_REENTRANT', '-DHAVE_CONFIG_H', '-D_GNU_SOURCE',
-                     '-Wno-sign-compare', '-std=c++11',
-                     '-Wmissing-declarations', '-Wwrite-strings',
-                     '-fno-strict-aliasing', language: 'cpp')
+                     '-Wno-sign-compare', '-Wmissing-declarations',
+                     '-Wwrite-strings', '-fno-strict-aliasing', language: 'cpp')
 
 # Some (stupid) GCC versions warn about unused return values even when they are
 # casted to void. This makes -Wunused-result pretty useless, since there is no
