Revert "Increase meson min version and avoid get_pkgconfig_variable warning (#682)"
This reverts commit 8db2ba06fef10f38f90b0f3213dd39ec07678e2f. This Meson version is not
yet generally available, so we do not want to depend on it..

--- a/util/meson.build
+++ b/util/meson.build
@@ -17,7 +17,7 @@ executable('mount.fuse3', ['mount.fuse.c'],
 udevrulesdir = get_option('udevrulesdir')
 if udevrulesdir == ''
   udev = dependency('udev')
-  udevrulesdir = join_paths(udev.get_variable(pkgconfig : 'udevdir'), 'rules.d')
+  udevrulesdir = join_paths(udev.get_pkgconfig_variable('udevdir'), 'rules.d')
 endif
 
 meson.add_install_script('install_helper.sh',
