Update travis to ubuntu jammy (22.04)
A newer ubuntu version is required to get a more recent meson
(at least 0.50 now)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 sudo: required
-dist: bionic
+dist: jammy
 
-before_install:
-    - curl https://spot.fedorapeople.org/spotfoss-ppa.key | sudo apt-key add -
-    - wget https://launchpad.net/~spotfoss/+archive/ubuntu/ppa/+files/valgrind_3.16.1-2_amd64.deb
-    - sudo apt install ./valgrind_3.16.1-2_amd64.deb
 language:
     - c
     - c++
@@ -15,14 +11,15 @@ addons:
     packages:
     - doxygen
     - clang
-    - libstdc++-7-dev 
+    - libstdc++-9-dev
     - libstdc++-10-dev
     - gcc
-    - gcc-7
+    - gcc-9
     - gcc-10
     - python3-pip
     - python3-setuptools
     - ninja-build
+    - valgrind
 install: test/travis-install.sh
 script: test/travis-build.sh
 
