Respect includedir when installing libfuse_config.h

--- a/meson.build
+++ b/meson.build
@@ -159,7 +159,7 @@ configure_file(output: 'fuse_config.h', configuration : private_cfg)
 # symbol (define) conflicts
 configure_file(output: 'libfuse_config.h',
                configuration : public_cfg,
-               install: true, install_dir: 'include/fuse3')
+               install: true, install_dir: join_paths(get_option('includedir'), 'fuse3'))
 
 # '.' will refer to current build directory, which contains config.h
 include_dirs = include_directories('include', 'lib', '.')
