Changed test/test746.so Meson build from custom_target() to shared_library().

--- a/test/meson.build
+++ b/test/meson.build
@@ -14,19 +14,13 @@ td += executable('readdir_inode', 'readdir_inode.c',
                  include_directories: include_dirs,
                  install: false)
 
-td += custom_target('test746.so',
-                      input: 'test746.c',
-                      output: 'test746.so',
-                      build_by_default: true,
-                      command: [
-                        'gcc', '-W', '-Wall', '-fPIC',
+td += shared_library('test746', 'test746.c',
+                      link_args: [
                         '-Wl,-init,test746_init',
                         '-Wl,-z,initfirst',
-                        '-shared',
-                        '-o', '@OUTPUT@',
-                        '@INPUT@',
                         '-ldl'
-                      ])
+                      ],
+                      install: false)
 
 test_scripts = [ 'conftest.py', 'pytest.ini', 'test_examples.py',
                  'util.py', 'test_ctests.py', 'test_custom_io.py' ]
